--- a/src/back/package.json
+++ b/src/back/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "node-schedule": "^2.1.1",
+    "puppeteer-core": "^24.11.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   },
   "name": "SmartOuvidoria",
-  "version": "2.2.0",
+  "version": "5.2.0",
   "bin": "index.js",
   "scripts": {
     "start": "node index.js"
